--- a/app.html
+++ b/app.html
@@ -38,32 +38,44 @@
     .ttm-actions { margin-top: .9rem; display: flex; justify-content: space-between; gap: .5rem; }
     .ttm-error { min-height: 1.2rem; color: #b42318; margin-top: .4rem; }
 
-    .ttm-hud { display: grid; grid-template-columns: 1fr auto 1fr; gap: .6rem; align-items: center; margin-bottom: .8rem; }
-    .ttm-score { display: flex; justify-content: space-between; align-items: center; border-radius: 11px; padding: .6rem .75rem; background: #f2f4f8; }
-    .ttm-score--blue { border: 1px solid #9fc1ff; color: #174b9d; }
-    .ttm-score--red { border: 1px solid #ffb4bc; color: #9e1f34; }
-    .ttm-timer { font-weight: 800; letter-spacing: .05em; border-radius: 999px; background: #111827; color: #fff; padding: .45rem .8rem; }
+    .ttm-titlebar { text-align: center; color: #1f73b8; font-weight: 900; letter-spacing: .04em; font-size: clamp(1.2rem, 2.4vw, 2rem); margin-bottom: .9rem; }
+    .ttm-layout { display: grid; grid-template-columns: minmax(240px,1fr) minmax(360px,1.8fr) minmax(240px,1fr); gap: .9rem; align-items: stretch; }
+    .ttm-arena { border: 1px solid #d9dfeb; border-radius: 16px; background: #ffffff; padding: .65rem; box-shadow: inset 0 0 0 1px #f3f5f9; }
+    .ttm-hud { display: grid; grid-template-columns: 1fr auto 1fr; gap: .4rem; align-items: center; border-radius: 11px; background: #eceef2; padding: .55rem .7rem; margin-bottom: .6rem; }
+    .ttm-score { color: #0f172a; font-weight: 700; display: grid; }
+    .ttm-score--blue { justify-items: start; }
+    .ttm-score--red { justify-items: end; }
+    .ttm-timer { font-weight: 800; letter-spacing: .03em; color: #2281c8; font-size: 1.2rem; }
 
-    .ttm-rope-zone { margin-bottom: .8rem; }
-    .ttm-track { position: relative; height: 44px; border-radius: 999px; background: linear-gradient(90deg, rgba(36,94,187,.11) 0%, #fff 50%, rgba(206,39,62,.11) 100%); border: 1px solid #d6def3; overflow: hidden; }
-    .ttm-center { position: absolute; left: 50%; top: 0; bottom: 0; width: 2px; transform: translateX(-50%); background: #7f8db0; }
-    .ttm-rope { position: absolute; left: 5%; right: 5%; top: 50%; height: 10px; transform: translateY(-50%); border-radius: 999px; background: repeating-linear-gradient(90deg, #8c5b2c 0 12px, #b27b45 12px 24px); }
-    .ttm-flag { position: absolute; top: 50%; left: 50%; width: 20px; height: 20px; transform: translate(-50%, -50%); border-radius: 50%; background: #f0f4ff; border: 3px solid #4a63d1; transition: left .26s cubic-bezier(.22,.61,.36,1); }
-    .ttm-labels { display: flex; justify-content: space-between; margin-top: .25rem; font-size: .83rem; }
-    .ttm-labels .b { color: #1f5aba; font-weight: 700; }
-    .ttm-labels .r { color: #bf2842; font-weight: 700; }
+    .ttm-rope-zone { position: relative; min-height: 410px; border-radius: 14px; border: 1px solid #e3e7ef; background: #fcfcfd; overflow: hidden; }
+    .ttm-center { position: absolute; left: 50%; top: 0; bottom: 0; width: 2px; transform: translateX(-50%); background: repeating-linear-gradient(to bottom, #7f8ba2 0 10px, transparent 10px 18px); }
+    .ttm-track { position: absolute; left: 9%; right: 9%; top: 50%; height: 8px; transform: translateY(-50%); border-radius: 999px; background: #1f1f21; }
+    .ttm-rope { position: absolute; inset: 0; border-radius: 999px; background: linear-gradient(90deg, #101113, #2c2e33); }
+    .ttm-flag { position: absolute; top: 50%; left: 50%; width: 14px; height: 36px; transform: translate(-50%, -50%); border-radius: 2px; background: linear-gradient(#d7393d 0 70%, #9d1f22 70%); transition: left .26s cubic-bezier(.22,.61,.36,1); }
+    .ttm-tugger { position: absolute; top: 53%; font-size: clamp(2.2rem, 4vw, 3.5rem); animation: ttmPull 1.1s ease-in-out infinite alternate; user-select: none; }
+    .ttm-tugger--left { left: 6%; }
+    .ttm-tugger--left.b { left: 20%; animation-delay: .2s; }
+    .ttm-tugger--right { right: 20%; animation-delay: .1s; }
+    .ttm-tugger--right.b { right: 6%; animation-delay: .3s; }
+    .ttm-image-hint { position: absolute; left: .7rem; right: .7rem; bottom: .5rem; margin: 0; font-size: .74rem; color: #677088; text-align: center; }
 
-    .ttm-teams { display: grid; grid-template-columns: 1fr 1fr; gap: .75rem; }
-    .ttm-team { border: 1px solid #d9e1f8; border-radius: 14px; padding: .8rem; background: #fbfdff; }
+    .ttm-team { border: 1px solid #d9e1f8; border-radius: 14px; padding: 0; background: #fbfdff; overflow: hidden; box-shadow: 0 10px 20px rgba(15, 23, 42, .06); }
     .ttm-team--blue { box-shadow: inset 0 0 0 1px rgba(66,126,224,.12); }
     .ttm-team--red { box-shadow: inset 0 0 0 1px rgba(217,69,94,.14); }
-    .ttm-question { font-size: 1.2rem; font-weight: 800; margin: .4rem 0; min-height: 1.5em; }
-    .ttm-input { border: 1px dashed #b8c7ee; border-radius: 10px; background: #f3f7ff; padding: .5rem .6rem; font-family: ui-monospace, monospace; font-size: 1.1rem; margin-bottom: .5rem; min-height: 2rem; }
+    .ttm-team-head { display:flex; align-items:center; justify-content:space-between; padding: .7rem .8rem; color:#fff; }
+    .ttm-team-head--blue { background: #2f84d8; }
+    .ttm-team-head--red { background: #d8343a; }
+    .ttm-team-points { min-width: 34px; text-align: center; font-weight: 900; border-radius: 999px; background: #fff; color: #0f172a; padding: .1rem .45rem; }
+    .ttm-team-body { padding: .7rem; }
+    .ttm-question { font-size: 2.9rem; line-height: 1.1; text-align:center; font-weight: 900; margin: .35rem 0 .55rem; min-height: 1.3em; }
+    .ttm-team--blue .ttm-question { color: #2f84d8; }
+    .ttm-team--red .ttm-question { color: #d8343a; }
+    .ttm-input { border: 2px solid #d6dbe8; border-radius: 12px; background: #ffffff; padding: .4rem .6rem; font-family: ui-monospace, monospace; font-size: 2rem; text-align: center; font-weight: 800; margin-bottom: .6rem; min-height: 2rem; }
     .ttm-keypad { display: grid; grid-template-columns: repeat(3, minmax(0,1fr)); gap: .35rem; }
-    .ttm-key { border: 1px solid #c5d3f6; background: #fff; border-radius: 10px; padding: .5rem; font-weight: 700; cursor: pointer; transition: .18s ease; }
+    .ttm-key { border: 1px solid #d6dae4; background: #fff; border-radius: 10px; padding: .82rem .3rem; font-weight: 800; font-size: 1.95rem; cursor: pointer; transition: .18s ease; }
     .ttm-key:hover { transform: translateY(-1px); background: #eef4ff; }
     .ttm-key--clear { background: #ffe4e7; border-color: #ffc1ca; color: #8c1f32; }
-    .ttm-key--send { grid-column: span 2; background: #2150ca; border-color: #2150ca; color: #fff; }
+    .ttm-key--send { grid-column: span 1; background: #267dc9; border-color: #267dc9; color: #fff; font-size: 1.5rem; }
 
     .ttm-result { position: absolute; inset: 0; z-index: 12; display: grid; place-items: center; background: rgba(8, 12, 25, .72); }
     .ttm-result[hidden] { display: none; }
@@ -72,9 +84,15 @@
     @media (max-width: 960px) {
       .ttm-grid4 { grid-template-columns: repeat(2, minmax(0,1fr)); }
       .ttm-grid3 { grid-template-columns: 1fr; }
-      .ttm-team-inputs, .ttm-teams { grid-template-columns: 1fr; }
+      .ttm-team-inputs, .ttm-layout { grid-template-columns: 1fr; }
       .ttm-hud { grid-template-columns: 1fr; }
       .ttm-timer { justify-self: start; }
+      .ttm-rope-zone { min-height: 300px; }
+    }
+
+    @keyframes ttmPull {
+      from { transform: translateY(-50%) translateX(0); }
+      to { transform: translateY(-52%) translateX(-8px); }
     }
   </style>
 
@@ -678,6 +696,7 @@
               <div class="ttm-card">
                 <p class="ttm-step-label" id="ttmStepLabel">Pas 1 de 3</p>
                 <h3 id="ttmSetupTitle" class="ttm-title">Configuració del tira-corda matemàtic</h3>
+                <p class="subtitle">Quan entris al joc, primer et demanarà de quin mòdul vols fer el repte.</p>
 
                 <div class="ttm-step is-active" data-step="1">
                   <label class="ttm-module-field">
@@ -737,34 +756,50 @@
               </div>
             </div>
 
-            <div class="ttm-hud">
-              <div class="ttm-score ttm-score--blue"><strong id="ttmBlueName">Equip blau</strong><span>✅ <span id="ttmBlueScore">0</span></span></div>
-              <div class="ttm-timer" id="ttmTimer">02:00</div>
-              <div class="ttm-score ttm-score--red"><strong id="ttmRedName">Equip vermell</strong><span>✅ <span id="ttmRedScore">0</span></span></div>
-            </div>
-
-            <div class="ttm-rope-zone" aria-label="Corda del tira-corda">
-              <div class="ttm-track">
-                <div class="ttm-center"></div>
-                <div class="ttm-rope"></div>
-                <div class="ttm-flag" id="ttmFlag"></div>
-              </div>
-              <div class="ttm-labels"><span class="b">Camp blau</span><span class="r">Camp vermell</span></div>
-            </div>
-
-            <div class="ttm-teams">
+            <h3 class="ttm-titlebar">TUG OF WAR: MATHEMATICS</h3>
+            <div class="ttm-layout">
               <section class="ttm-team ttm-team--blue" data-team="blue">
-                <h3 id="ttmBluePanelTitle">Equip blau</h3>
-                <p class="ttm-question" id="ttmQuestionBlue">Esperant inici...</p>
-                <div class="ttm-input" id="ttmInputBlue">0</div>
-                <div class="ttm-keypad" data-keypad="blue"></div>
+                <div class="ttm-team-head ttm-team-head--blue">
+                  <h3 id="ttmBluePanelTitle">Equip blau</h3>
+                  <span class="ttm-team-points" id="ttmBlueScore">0</span>
+                </div>
+                <div class="ttm-team-body">
+                  <p class="ttm-question" id="ttmQuestionBlue">8 + 8 = ?</p>
+                  <div class="ttm-input" id="ttmInputBlue">0</div>
+                  <div class="ttm-keypad" data-keypad="blue"></div>
+                </div>
+              </section>
+
+              <section class="ttm-arena">
+                <div class="ttm-hud">
+                  <div class="ttm-score ttm-score--blue"><strong id="ttmBlueName">Equip blau</strong><span>Marcador</span></div>
+                  <div class="ttm-timer" id="ttmTimer">02:00</div>
+                  <div class="ttm-score ttm-score--red"><strong id="ttmRedName">Equip vermell</strong><span>Marcador</span></div>
+                </div>
+                <div class="ttm-rope-zone" aria-label="Corda del tira-corda">
+                  <div class="ttm-center"></div>
+                  <div class="ttm-track">
+                    <div class="ttm-rope"></div>
+                    <div class="ttm-flag" id="ttmFlag"></div>
+                  </div>
+                  <div class="ttm-tugger ttm-tugger--left">🧍‍♂️</div>
+                  <div class="ttm-tugger ttm-tugger--left b">🧍‍♂️</div>
+                  <div class="ttm-tugger ttm-tugger--right">🧍‍♂️</div>
+                  <div class="ttm-tugger ttm-tugger--right b">🧍‍♂️</div>
+                  <p class="ttm-image-hint">Si vols posar una imatge pròpia de l'animació, desa-la a <code>assets/challenges/tug-war.png</code> i substitueix aquests personatges.</p>
+                </div>
               </section>
 
               <section class="ttm-team ttm-team--red" data-team="red">
-                <h3 id="ttmRedPanelTitle">Equip vermell</h3>
-                <p class="ttm-question" id="ttmQuestionRed">Esperant inici...</p>
-                <div class="ttm-input" id="ttmInputRed">0</div>
-                <div class="ttm-keypad" data-keypad="red"></div>
+                <div class="ttm-team-head ttm-team-head--red">
+                  <h3 id="ttmRedPanelTitle">Equip vermell</h3>
+                  <span class="ttm-team-points" id="ttmRedScore">0</span>
+                </div>
+                <div class="ttm-team-body">
+                  <p class="ttm-question" id="ttmQuestionRed">7 + 6 = ?</p>
+                  <div class="ttm-input" id="ttmInputRed">0</div>
+                  <div class="ttm-keypad" data-keypad="red"></div>
+                </div>
               </section>
             </div>
 
